--- a/index.html
+++ b/index.html
@@ -3,10 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>An assignment for Module 2</title>
   <link rel="stylesheet" href="css/style.css" class="css">
 </head>
 <body>
-  <h1>Hello World!</h1>
+  <div class="heading">
+    <h1>Our menu</h1>
+    <div class="sections">
+      <section class="chicken">
+        <p class="title-chicken">Chicken</p>
+        <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur quis iste, dolorem dolore tempore minima perspiciatis ipsum consequuntur sed pariatur distinctio, rem beatae laborum! Saepe rem dolorem sapiente excepturi iusto!
+        </p>
+      </section>
+      <section class="beef">
+        <p class="title-beef">Beef</p>
+        <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur quis iste, dolorem dolore tempore minima perspiciatis ipsum consequuntur sed pariatur distinctio, rem beatae laborum! Saepe rem dolorem sapiente excepturi iusto!
+        </p>
+      </section>
+      <section class="fish">
+        <p class="title-fish">Fish</p>
+        <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur quis iste, dolorem dolore tempore minima perspiciatis ipsum consequuntur sed pariatur distinctio, rem beatae laborum! Saepe rem dolorem sapiente excepturi iusto!
+        </p>
+      </section>
+    </div>
+  </div>
 </body>
 </html>
